# libopendaap-0.4.0

./: .gitattributes  .gitignore  COPYING  ChangeLog  Makefile.am  Makefile.in  NEWS  README  client.c  client.h  config.h.in  configure  configure.ac  configure.scan  daap.c  discover.c  discover.h  endian_swap.h  global.c  http_client.c  http_client.h  ioloop.c  private.h  thread.h
authentication/: Makefile.am  Makefile.in
debug/: Makefile.am  Makefile.in  debug.c
mdnsd/: 1035.c  1035.h  Makefile.am  Makefile.in  mdnsd.c  mdnsd.h
